# google-fact-check

./: .gitignore  README.md  api_client.py  contracts.py  data_processor.py  main.py  pyproject.toml  storage.py
factcheck_data/: factchecks_raw_20251217_145821.jsonl  google_factchecks.parquet  publishers.json
